# oft-wizard

./: .env  .gitignore  .gitmodules  81ea7c18-34d1-4549-a99e-96ac2e0e9b5f  Cargo.toml  LICENSE  README.md  foundry.toml
cli/: Cargo.toml
cli/src/: cli.rs  foundry.toml  helpers.rs  main.rs
core/: Cargo.toml  README.md
core/cache/: solidity-files-cache.json
core/src/: artifacts.rs  chain.rs  client.rs  compiler.rs  deployer.rs  layer_zero.rs  lib.rs  lz_options.rs  provider.rs
core/src/contracts/: foundry.toml  package.json  pnpm-lock.yaml
core/src/contracts/src/: MyOApp.sol
core/src/solidity/: foundry.toml  package.json  pnpm-lock.yaml
core/src/solidity/contracts/: SimpleIncrement.sol
