[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2", features = ["abigen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"
