[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2", features = ["abigen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
foundry-compilers = "0.10.1"
foundry-config = "0.2"
